--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "author": "",
   "window": {
-    "frame": false,
-    "toolbar": false,
+    "frame": true,
+    "toolbar": true,
     "width": 220,
     "height": 85,
-    "transparent": true,
-    "resizable": false,
+    "transparent": false,
+    "resizable": true,
     "fullscreen": false
   },
   "dependencies": {
