--- a/package.json
+++ b/package.json
@@ -8,23 +8,19 @@
   },
   "author": "",
   "window": {
-    "frame": true,
-    "toolbar": true,
+    "frame": false,
+    "toolbar": false,
     "width": 220,
-    "height": 85,
-    "transparent": false,
-    "resizable": true,
+    "height": 100,
+    "transparent": true,
+    "resizable": false,
     "fullscreen": false
   },
   "dependencies": {
     "bootstrap": "3.3.6",
-    "cal-heatmap": "^3.5.4",
-    "d3": "^3.5.16",
     "font-awesome": "^4.5.0",
     "fs": "0.0.2",
     "ini": "1.3.4",
-    "jquery": "2.2.0",
-    "materialize-css": "^0.97.5",
-    "nw-notify": "^1.0.2"
+    "jquery": "2.2.0"
   }
 }
